# ansible-role-proxmox-ct

./: .gitignore  .pre-commit-config.yaml  .yamllint  README.md  pyproject.toml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
tasks/: main.yml
vars/: main.yml
