[project]
name = "ansible-role-proxmox-ct"
version = "0.1.0"
description = "Ansible role to manage Proxmox Containers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ansible>=13.1.0",
    "ansible-lint>=25.12.2",
    "prek>=0.3.6",
    "yamllint>=1.37.1",
]
